--- a/01-ImplicitIntentDemo/app/src/main/res/layout/activity_main.xml
+++ b/01-ImplicitIntentDemo/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,15 @@
         android:layout_height="wrap_content"
         android:text="StreetView demo" />
 
+    <ImageView
+        android:id="@+id/ivData"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+    <TextView
+        android:text="+36301234567"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="web|phone"/>
+
 </LinearLayout>
