--- a/02-17-DialogFragmentDemo/app/src/main/res/layout/layout_dialog.xml
+++ b/02-17-DialogFragmentDemo/app/src/main/res/layout/layout_dialog.xml
@@ -11,6 +11,7 @@
         android:hint="Name here"/>
 
     <EditText
+        android:id="@+id/etAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Address here"/>
