--- a/02-20-CustomViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/02-20-CustomViewDemo/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,8 @@
 
     <com.cubixedu.customviewdemo.MyCustomView
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="120dp"
+        android:text="Press me!"
+        custom:countcolor="#009688" />
 
 </LinearLayout>
