--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_main.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_main.xml
@@ -8,21 +8,26 @@
     android:orientation="vertical"
     tools:context=".FragmentMain">
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/chartBalance"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp" />
 
-    <Button
-        android:id="@+id/btnEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Insert item" />
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/chartBalance"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="66dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="24dp">
+
+        </com.github.mikephil.charting.charts.PieChart>
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:text="Insert item" />
 
 </FrameLayout>
