--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_main.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +12,8 @@
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chartBalance"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="66dp"
@@ -30,4 +31,4 @@
             android:layout_marginTop="8dp"
             android:text="Insert item" />
 
-</FrameLayout>
+</LinearLayout>
