02. -23- IncomeExpenseNavigationDemo - edit fragment - data object

--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_page_expense.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_page_expense.xml
@@ -5,8 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tvExpense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btExpense"
+        tools:text="Sum: 1000" />
+
     <EditText
-        android:id="@+id/etIncome"
+        android:id="@+id/etExpense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -25,5 +35,5 @@
         android:text="Expense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etIncome" />
+        app:layout_constraintTop_toBottomOf="@+id/etExpense" />
 </androidx.constraintlayout.widget.ConstraintLayout>
