--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tvExpense"
+        android:id="@+id/tvSum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btExpense"
+        app:layout_constraintTop_toBottomOf="@+id/btAdd"
         tools:text="Sum: 1000" />
 
     <EditText
-        android:id="@+id/etExpense"
+        android:id="@+id/etValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -28,12 +28,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btExpense"
+        android:id="@+id/btAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Expense"
+        tools:text="Expense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etExpense" />
+        app:layout_constraintTop_toBottomOf="@+id/etValue" />
 </androidx.constraintlayout.widget.ConstraintLayout>
