--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
@@ -36,4 +36,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etValue" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSum" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
