--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/layout/fragment_pages.xml
@@ -18,14 +18,14 @@
     <EditText
         android:id="@+id/etValue"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text"
-        tools:text="Expense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Expense" />
 
     <Button
         android:id="@+id/btAdd"
@@ -36,13 +36,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etValue" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSum" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
