--- a/03-28-LocationAndMapDemo/app/src/main/res/layout/activity_maps.xml
+++ b/03-28-LocationAndMapDemo/app/src/main/res/layout/activity_maps.xml
@@ -8,9 +8,10 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/btnSelectPlace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gomb" />
+        android:text="Select place" />
 
     <fragment
         android:id="@+id/map"
