--- a/05-55-GoodBuyDemo/app/src/main/res/layout/activity_search.xml
+++ b/05-55-GoodBuyDemo/app/src/main/res/layout/activity_search.xml
@@ -8,22 +8,15 @@
     tools:context=".SearchActivity"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etSearch"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/sv_ads_search"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_margin="24dp"
-        android:hint="Search this text..." />
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_margin="24dp"
-        android:text="Search" />
+        android:layout_height="wrap_content"
+        android:textCursorDrawable="@null"
+        app:iconifiedByDefault="false" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerSearch"
+        android:id="@+id/rw_Search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="24dp"
