--- a/practice/FirebaseSearchFilteringDemo/app/src/main/res/layout/fragment_first.xml
+++ b/practice/FirebaseSearchFilteringDemo/app/src/main/res/layout/fragment_first.xml
@@ -6,30 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".FirstFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:orientation="vertical" >
+
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:hint="Name"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/etRegNumber"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:hint="Reg number"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/etGender"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:hint="Gender"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/etAmount"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:hint="Amount"
+            android:layout_height="48dp" />
+
+        <EditText
+            android:id="@+id/etAge"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:hint="Age"
+            android:layout_height="48dp" />
 
         <Button
-            android:id="@+id/button_first"
+            android:id="@+id/btnSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next"
-            app:layout_constraintBottom_toTopOf="@id/textview_first"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_gravity="center_horizontal"
+            android:text="Send" />
 
-        <TextView
-            android:id="@+id/textview_first"
+        <Button
+            android:id="@+id/btnList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/lorem_ipsum"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_first" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="center_horizontal"
+            android:text="List" />
+
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
