--- a/05-55-2-GoodBuyDemo/app/src/main/res/layout/fragment_list.xml
+++ b/05-55-2-GoodBuyDemo/app/src/main/res/layout/fragment_list.xml
@@ -25,11 +25,19 @@
             android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Display Data"
             app:layout_constraintEnd_toEndOf="@+id/btnSearchSingle"
+            app:layout_constraintTop_toBottomOf="@+id/etsearchValue" />
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Add ads"
             app:layout_constraintStart_toStartOf="@+id/etsearchValue"
             app:layout_constraintTop_toBottomOf="@+id/etsearchValue" />
 
@@ -45,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@+id/etSearch" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerStudents"
+            android:id="@+id/recyclerAds"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
