6. -64- Házi feladat - Music player - create fragments dir, move NowPlayingFragment

--- a/06-64-MusicPlayer/app/src/main/res/layout/activity_main.xml
+++ b/06-64-MusicPlayer/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/nowPlaying"
-                android:name="hu.paulolajos.musicplayer.utils.NowPlayingFragment"
+                android:name="hu.paulolajos.musicplayer.fragments.NowPlayingFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
