--- a/06-64-SimpleMusicPlayer2/app/src/main/res/layout/activity_main.xml
+++ b/06-64-SimpleMusicPlayer2/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,8 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_main"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
