--- a/06-64-SimpleMusicPlayer2/app/src/main/res/layout/fragment_list.xml
+++ b/06-64-SimpleMusicPlayer2/app/src/main/res/layout/fragment_list.xml
@@ -18,6 +18,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
             android:textSize="24sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,6 +45,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSongTitle" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.Toolbar
