Practice - RickAndMorty - run, not work :( - dagger hilt ?

--- a/practice/RickAndMorty/app/src/main/res/values/themes.xml
+++ b/practice/RickAndMorty/app/src/main/res/values/themes.xml
@@ -6,4 +6,10 @@
     </style>
 
     <style name="Theme.RickAndMorty" parent="Base.Theme.RickAndMorty" />
+
+    <style name="ToolbarTheme" parent="ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">#EEEEEE</item>
+    </style>
+
 </resources>
