--- a/10-b2-TaxiDemo/app/src/main/res/layout/activity_main.xml
+++ b/10-b2-TaxiDemo/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:hint="@string/email"
+        android:text="client@gmail.com"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"/>
@@ -27,6 +28,7 @@
         android:layout_marginTop="8dp"
         android:padding="5dp"
         android:inputType="textPassword"
+        android:text="123456"
         android:ems="10"
         android:hint="@string/password"
         app:layout_constraintStart_toStartOf="@+id/emailTextRegister"
