--- a/10-b2-TaxiDemo/app/src/main/res/layout/activity_maps.xml
+++ b/10-b2-TaxiDemo/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,7 @@
     </RelativeLayout>
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/frameContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
