--- a/10-b2-TaxiDemo/app/src/main/res/layout/fragment_map.xml
+++ b/10-b2-TaxiDemo/app/src/main/res/layout/fragment_map.xml
@@ -11,16 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="671dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="0dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        />
+        android:layout_marginEnd="0dp" />
 
     <Button
         android:id="@+id/endRouteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
+        android:layout_gravity="top|end"
         android:text="Finish the tour"
         android:visibility="invisible"
         />
